# pico-NRF24-bidirectional

./: CMakeLists.txt  README.md  main.cpp  start.sh
